# ROB314

./: README.md
devel/: .catkin  .rosinstall  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/include/household_objects_database_msgs/: DatabaseModelPose.h  DatabaseModelPoseList.h  DatabaseReturnCode.h  DatabaseScan.h  GetModelDescriptionRequest.h  GetModelDescriptionResponse.h  GetModelListRequest.h  GetModelListResponse.h  GetModelMeshRequest.h  GetModelMeshResponse.h  GetModelScansRequest.h  GetModelScansResponse.h  SaveScanRequest.h  SaveScanResponse.h  TranslateRecognitionIdRequest.h  TranslateRecognitionIdResponse.h
devel/include/manipulation_msgs/: CartesianGains.h  ClusterBoundingBox.h  Grasp.h  GraspPlanningAction.h  GraspPlanningActionFeedback.h  GraspPlanningActionGoal.h  GraspPlanningActionResult.h  GraspPlanningErrorCode.h  GraspPlanningFeedback.h  GraspPlanningGoal.h  GraspPlanningRequest.h  GraspPlanningResponse.h  GraspPlanningResult.h  GraspResult.h  GraspableObject.h  GraspableObjectList.h  GripperTranslation.h  ManipulationPhase.h  ManipulationResult.h  PlaceLocation.h  PlaceLocationResult.h  SceneRegion.h
src/: .rosinstall  .rosinstall.bak
src/armoncar_package/: CMakeLists.txt  package.xml
src/armoncar_package/launch/: display_mrobot_with_arm_and_laser.launch
src/armoncar_package/panda_config/: .setup_assistant  package.xml
src/armoncar_package/panda_config/config/: panda_on_car.srdf
src/armoncar_package/panda_config/launch/: chomp_planning_pipeline.launch.xml  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  planning_context.launch  sensor_manager.launch.xml  setup_assistant.launch
src/armoncar_package/urdf/: mrobot.gv  mrobot_body.urdf.xacro  mrobot_with_arm_and_laser.urdf  mrobot_with_arm_and_laser.urdf.xacro  panda.control.urdf  panda_on_car.gv  xxx.urdf
src/armoncar_package/urdf/robots/common/: franka_arm.xacro  franka_hand.xacro  franka_robot.xacro
src/armoncar_package/urdf/robots/panda/: panda.urdf.xacro
src/armoncar_package/urdf/robots/rgbd_camera/: rgbd_camera.xacro
src/hand_with_vision/: .blocks_poses_publisher.cpp.swn  .blocks_poses_publisher.cpp.swo  .blocks_poses_publisher.cpp.swp  CMakeLists.txt  blocks_poses_publisher.cpp  move_arm.py  package.xml  testmove2.py  testvisionplanner.py  ur5_gripper.py  ur5_mp.py  ur5_vision.py  vision.py
src/hand_with_vision/launch/: initialize.launch
src/hand_with_vision/urdf/: conveyor_belt.urdf  red_box.urdf
src/mrobot_navigation/: package.xml
src/my_package/: CMakeLists.txt  package.xml
src/my_package/src/: tutorial.py  (+6 more)
src/panda_config/: .setup_assistant  package.xml
(+104 files in other folders)
